2003-07-25  Peter Fales <peter@fales-lorenz.net>
	* include/sane/sanei_cderror.h, include/sane/sanei_jinclude.h 
	  include/sane/sanei_jpeg.h sanei/sanei_jpeg.c:  Install these
	  files as copies of the ones currently in backend.  (The old
	  files will be deleted later)
	* Moved backend/djpeg.README to README.djpeg and added usage info
	 
2003-07-25  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/gt68xx.c backend/gt68xx.conf doc/sane-gt68xx.man
	  doc/descriptions/gt68xx.desc doc/gt68xx/gt68xx.CHANGES: Added
	  Fujitsu 1200CUS to man page, .conf and .desc. Changed .conf file
	  to be more readable.  Added RevScan 19200i to .conf file.  Added
	  Plustek U16B to .desc and .conf, updated UT16B.
	* po/sane-backends.de.po: Added some translations for the HP
	  backend. Minor header updates.
	* po/sane-backends.cs.po po/sane-backends.es.po po/sane-backends.fr.po
	  po/sane-backends.nl.po po/sane-backends.no.po po/sane-backends.pt.po
	  po/sane-backends.ru.po po/sane-backends.sv.po: Regenerated to include
	  recent changes in the backends.
	* include/sane/sanei_scsi.h include/sane/sanei_wire.h:  Changed
	  license to GPL + SANE exception.
	* TODO: Added canon630u SANE_I18N and include file license
	  problem. Updated .desc file section.
	
2003-07-24  Peter Kirchgessner <peter@kirchgessner.net>

	* backend/hp.c, backend/hp-option.h, backend/hp-option.c
	  po/Makefile.in: Add support for Internationalization for hp-backend.

2003-07-24  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* tools/check-usb-chip.c: Added support for detecting Genesys
	  Logic GL646. Fixed indentation.

2003-07-23  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* include/sane/sanei_thread.h include/sane/sanei_usb.h: Changed
	  license to GPL + SANE exception.

2003-07-22  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/mustek_pp.desc: Tag CCD scanners as unsupported
	  and mention that they work in 1.0.9 or earlier.
